# tarlan-rtech

./: .gitignore  .gitmodules  LICENSE  README.md  kinetic-ros_comm-wet.rosinstall
src/: .setup_assistant  mymap.yaml
src/beginner_tutorials/: CMakeLists.txt  package.xml
src/dual_manipulator_moveit_config/: .setup_assistant  package.xml
src/dual_manipulator_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  ros_controllers.yaml  ur5_sia5d_dual.srdf
src/dual_manipulator_moveit_config/launch/: chomp_planning_pipeline.launch.xml  demo_gazebo.launch  gazebo.launch  move_group.launch  planning_context.launch  ros_controllers.launch  sensor_manager.launch.xml  trajectory_execution.launch.xml  ur5_sia5d_dual_moveit_controller_manager.launch.xml
src/dual_manipulator_support/: CMakeLists.txt  package.xml
src/dual_manipulator_support/urdf/: sia5d_dual.xacro  ur5_sia5d_dual.xacro
src/dual_sia5_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/dual_sia5_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  ros_controllers.yaml  sia5d_dual.srdf
src/dual_sia5_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  sia5d_dual_moveit_controller_manager.launch.xml  trajectory_execution.launch.xml  warehouse.launch
src/file-system-tutorial/: CMakeLists.txt  package.xml
src/file-system-tutorial/src/: multiply_two_ints_client.cpp  multiply_two_ints_server.cpp
src/file-system-tutorial/srv/: Service.srv
src/motoman_sia5d_demo/: CMakeLists.txt  package.xml
src/motoman_sia5d_demo/src/: demo.cpp
src/motoman_sia5d_moveit_config/: package.xml
src/my_r2d2/: CMakeLists.txt  package.xml
src/my_r2d2/calibrations/: ost.yaml
src/my_r2d2/config/: r2d2.rviz
src/my_r2d2/launch/: ar_tracker.launch  r2d2.launch  test_playback.launch
src/my_r2d2/urdf/: r2d2-from-xacro.urdf  r2d2.urdf.xacro
src/r2d2_navigator/: package.xml
src/ros_bag_files_playback/: CMakeLists.txt  package.xml
src/urdf_tutorial/config/: r2d2.rviz
src/urdf_tutorial/launch/: display.launch
