<?xml version="1.0"?>
<package format="2">
  <name>motoman_sia5d_demo</name>
  <version>0.0.1</version>
  <description>The package</description>

  <maintainer email="tahasa@ttu.ee">Tarlan Hasanli</maintainer>
  <license>MIT</license>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>moveit_ros_planning_interface</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
</package>
